# python-gltf-document

./: GLTF_TESTING_README.md  README.md  comprehensive_compatibility_test.py  example_usage.py  justfile  pyproject.toml  requirements-test.txt  requirements.txt  round_trip_test.py  run_gltf_tests.py  simple_test.py  skin_tool_example.py  slash_gltf_tests.py  temp_buffer.json  test_comprehensive.py  test_gltf_loading.py  test_gpu_pipeline.py  test_pte_models.py
.clinerules/Rules/: ban-conventional-commits.md  slash-testing-only.md  tombstone-emoji-prints.md
.github/workflows/: ci.yml
gltf_module/: __init__.py  accessor_decoder.py  gltf_document.py  gltf_exporter.py  gltf_state.py  gpu_binary_format.py  gpu_operators.py  gpu_pipeline.py  logger.py  scene_generator.py  skin_tool.py  structures.py  torch_decoder.py  torch_structures.py
scripts/: generate_cube_fixture.py  gpu_benchmark.py  gpu_process.py
test_fixtures/: test_cube.base64  test_cube.gltf  test_cube_embedded.gltf
tests/: run_tests.py  test_error_handling.py  test_glb_parsing.py  test_gltf_document.py  test_performance.py  test_scene_generation.py
